# service-auth

./: .env  .env.production  Cargo.toml  Dockerfile  Makefile  README.md  cert.pem  docker-compose.yml  key.pem
migrations/2021-03-28-200940_invitations/: up.sql
migrations/2021-03-28-200949_users/: up.sql
migrations/2021-04-02-182922_users/: up.sql
migrations/2021-04-05-094127_login_history/: up.sql
migrations/2021-04-05-094327_add_login_session_field_to_users_table/: down.sql  up.sql
migrations/2021-04-10-195617_webs/: down.sql  up.sql
migrations/2021-04-10-210008_add_column_url_to_webs/: down.sql  up.sql
migrations/2021-04-10-221212_add_field_image_to_webs/: down.sql  up.sql
src/: constants.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: auth.rs  mod.rs  serving_static.rs  web.rs
src/models/: auth.rs  login_history.rs  mod.rs  web.rs
src/repository/: auth.rs  login_history.rs  web.rs
src/requests/: mod.rs  rq_auth.rs  rq_web.rs
src/responses/: mod.rs  serving_static.rs  token_body.rs
src/routes/: auth.rs  mod.rs  web.rs
src/services/: account_service.rs  mod.rs  service_error.rs  user_token.rs  web_service.rs
src/utils/: token_utils.rs
