[package]
name = "service-auth"
version = "0.1.0"
authors = ["Rafael González Muñoz <rafael.gonzalez.1737@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.5", features = ["openssl"] }
openssl = { version = "0.10.33", features = ["v110"] }
futures="0.3.13"
env_logger = "0.8.3"
