[package]
name = "service-auth"
version = "0.1.0"
authors = ["Rafael González Muñoz <rafael.gonzalez.1737@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.5", features = ["openssl"] }
openssl = { version = "0.10.33", features = ["v110"] }
futures = "0.3.13"
env_logger = "0.8.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
r2d2 = "0.8.9"
dotenv = "0.15.0"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
derive_more = "0.99"
chrono = { version = "0.4.19", features = ["serde"] }
